Added a couple more Python 3.2 fixes from Vinay Sajip.

--- a/docs/news.txt
+++ b/docs/news.txt
@@ -4,6 +4,8 @@ Changes & News
 tip (unreleased)
 ~~~~~~~~~~~~~~~~
 
+* Added Python 3 support! Huge thanks to Vinay Sajip and Vitaly Babiy.
+
 * Fixed creation of virtualenvs on Mac OS X when standard library modules  
   (readline) are installed outside the standard library.
 
