Added Vinay Sajip to AUTHORS.txt.

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -21,8 +21,9 @@ Douglas Creager
 Jeff Hammel
 Jorge Vargas
 Josh Bronson
+Kumar McMillan
 Lars Francke
 Philip Jenvey
 Ronny Pfannschmidt
 Tarek Ziadé
-kumar
+Vinay Sajip
