--- a/docs/news.txt
+++ b/docs/news.txt
@@ -4,14 +4,14 @@ Changes & News
 Next release (1.7) schedule
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Beta release mid-July 2011, final release early August.
+Beta release November 2011, final release December.
 
 Next release
 ~~~~~~~~~~~~
 
 * Made ``--no-site-packages`` behavior the default behavior.  The
   ``--no-site-packages`` flag is still permitted, but displays a warning when
-  used.
+  used. Thanks Chris McDonough.
 
 * New flag: ``--use-site-packages``; this flag should be passed to get the
   previous default global-site-package-including behavior back.
