--- a/docs/news.txt
+++ b/docs/news.txt
@@ -9,6 +9,8 @@ Beta release November 2011, final release December.
 Next release
 ~~~~~~~~~~~~
 
+* Updated embedded distribute release to 0.6.24.
+
 * Made ``--no-site-packages`` behavior the default behavior.  The
   ``--no-site-packages`` flag is still permitted, but displays a warning when
   used. Thanks Chris McDonough.
