--- a/docs/news.txt
+++ b/docs/news.txt
@@ -6,8 +6,8 @@ Next release (1.7) schedule
 
 Beta release November 2011, final release December.
 
-Next release
-~~~~~~~~~~~~
+1.7 (2011-11-30)
+~~~~~~~~~~~~~~~~
 
 * Updated embedded distribute release to 0.6.24.
 
@@ -17,6 +17,9 @@ Next release
 
 * New flag: ``--use-site-packages``; this flag should be passed to get the
   previous default global-site-package-including behavior back.
+
+* Added ability to set command options as environment variables and options
+  in a ``virtualenv.ini`` file.
 
 1.6.4 (2011-07-21)
 ~~~~~~~~~~~~~~~~~~
