--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -13,11 +13,15 @@ Jannis Leidel
 Contributors
 ------------
 
+Alex Grönholm
 Antonio Cuni
 Armin Ronacher
+Chris McDonough
+Christian Stefanescu
 Christopher Nilsson
 Curt Micol
 Douglas Creager
+Gunnlaugur Thor Briem
 Jeff Hammel
 Jorge Vargas
 Josh Bronson
@@ -27,4 +31,3 @@ Philip Jenvey
 Ronny Pfannschmidt
 Tarek Ziadé
 Vinay Sajip
-Gunnlaugur Thor Briem
