--- a/docs/news.txt
+++ b/docs/news.txt
@@ -9,7 +9,7 @@ Beta release November 2011, final release December.
 1.7 (2011-11-30)
 ~~~~~~~~~~~~~~~~
 
-* Updated embedded distribute release to 0.6.24.
+* Updated embedded Distribute release to 0.6.24. Thanks Alex Grönholm.
 
 * Made ``--no-site-packages`` behavior the default behavior.  The
   ``--no-site-packages`` flag is still permitted, but displays a warning when
@@ -20,6 +20,10 @@ Beta release November 2011, final release December.
 
 * Added ability to set command options as environment variables and options
   in a ``virtualenv.ini`` file.
+
+* Fixed various encoding related issues with paths. Thanks Gunnlaugur Thor Briem.
+
+* Made ``virtualenv.py`` script executable.
 
 1.6.4 (2011-07-21)
 ~~~~~~~~~~~~~~~~~~
