Added changelog note re search-dirs and (overdue) AUTHORS entry for Ethan Jucovy.

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -21,6 +21,7 @@ Christian Stefanescu
 Christopher Nilsson
 Curt Micol
 Douglas Creager
+Ethan Jucovy
 Gunnlaugur Thor Briem
 Jeff Hammel
 Jorge Vargas
