Updated docs a little and added Jason to the authors file.
This also changes the docs slightly regarding the default execution policy setting on Windows 7 ("Restricted" according to http://technet.microsoft.com/en-us/library/dd347641.aspx).

--- a/docs/news.txt
+++ b/docs/news.txt
@@ -1,6 +1,12 @@
 Changes & News
 --------------
 
+In development
+~~~~~~~~~~~~~~
+
+* Added activation script for Powershell (signed by Jannis Leidel). Many
+  thanks to Jason R. Coombs.
+
 1.7 (2011-11-30)
 ~~~~~~~~~~~~~~~~
 
