Update AUTHORS and changelog.

--- a/docs/news.txt
+++ b/docs/news.txt
@@ -4,6 +4,10 @@ Changes & News
 1.7.1.2 (2012-02-17)
 ~~~~~~~~~~~~~~~~~~~~
 
+* Restored ability to create a virtualenv with a path longer than 78
+  characters, without breaking creation of virtualenvs with non-ASCII paths.
+  Thanks, Bradley Ayers.
+
 * Fixed minor issue in `--relocatable`. Thanks, Cap Petschulat.
 
 1.7.1.1 (2012-02-16)
