--- a/docs/news.txt
+++ b/docs/news.txt
@@ -3,11 +3,12 @@ Changes & News
 
 .. warning::
 
-   Python bugfix releases 2.6.8 and 2.7.3 include a change that will cause
-   "import random" to fail with "cannot import name urandom" on any virtualenv
-   created with an earlier release of Python 2.6 or 2.7, if the underlying
-   system Python is upgraded. It can be fixed by re-running virtualenv on the
-   same target directory, with the upgraded Python.
+   Python bugfix releases 2.6.8, 2.7.3, 3.1.5 and 3.2.3 include a change that
+   will cause "import random" to fail with "cannot import name urandom" on any
+   virtualenv created with an earlier release of Python 2.6/2.7/3.1/3.2, if the
+   underlying system Python is upgraded. It can be fixed by removing
+   ``$ENV/bin/python`` and re-running virtualenv on the same target directory
+   with the upgraded Python.
 
 
 master (unreleased)
