Fix activate.fish for OS X. Thanks David Schoonover.

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -25,6 +25,7 @@ Christian Stefanescu
 Christopher Nilsson
 Cliff Xuan
 Curt Micol
+David Schoonover
 Doug Hellmann
 Doug Napoleone
 Douglas Creager
