Use the codecs module to load the virtualenv.py when creating a bootstrap file. Fixes #280.

--- a/docs/news.txt
+++ b/docs/news.txt
@@ -36,6 +36,8 @@ develop (unreleased)
 
 * Fixed PyPy and Jython support on Windows. Thanks Konstantin Zemlyak.
 
+* Fixed creating a bootstrap script on Python 3. Thanks Raul Leal. Fixes #280.
+
 1.7.1.2 (2012-02-17)
 ~~~~~~~~~~~~~~~~~~~~
 
