--- a/docs/news.txt
+++ b/docs/news.txt
@@ -18,6 +18,9 @@ Changes & News
 master (unreleased)
 ~~~~~~~~~~~~~~~~~~~
 
+* Fix `--relocatable` on systems that use lib64. Fixes #78. Thanks Branden
+  Rolston.
+
 * Symlink some additional modules under Python 3. Fixes #194. Thanks Vinay
   Sajip, Ian Clelland, and Stefan Holek for the report.
 
