--- a/docs/news.txt
+++ b/docs/news.txt
@@ -15,11 +15,19 @@ Changes & News
    with the upgraded Python.
 
 
+develop (unreleased)
+~~~~~~~~~~~~~~~~~~~~
+
+* Make it possible to create a virtualenv from within a Python
+  3.3. pyvenv. Thanks Chris McDonough for the report.
+
+
 1.8.2 (2012-09-06)
 ~~~~~~~~~~~~~~~~~~
 
 * Updated the included pip version to 1.2.1 to fix regressions introduced
   there in 1.2.
+
 
 1.8.1 (2012-09-03)
 ~~~~~~~~~~~~~~~~~~
@@ -29,6 +37,7 @@ Changes & News
 
 * Fix creating Python 3.3 based virtualenvs by unsetting the
   ``__PYVENV_LAUNCHER__`` environment variable in subprocesses.
+
 
 1.8 (2012-09-01)
 ~~~~~~~~~~~~~~~~
@@ -60,6 +69,7 @@ Changes & News
 
 * Updated the embedded version of distribute to 0.6.28 and pip to 1.2.
 
+
 1.7.2 (2012-06-22)
 ~~~~~~~~~~~~~~~~~~
 
@@ -89,10 +99,12 @@ Changes & News
   with the --distribute option or the ``VIRTUALENV_USE_DISTRIBUTE`` env var.
   ``VIRTUALENV_USE_DISTRIBUTE`` is now considered again as a legacy alias.
 
+
 1.7.1.2 (2012-02-17)
 ~~~~~~~~~~~~~~~~~~~~
 
 * Fixed minor issue in `--relocatable`. Thanks, Cap Petschulat.
+
 
 1.7.1.1 (2012-02-16)
 ~~~~~~~~~~~~~~~~~~~~
@@ -100,6 +112,7 @@ Changes & News
 * Bumped the version string in ``virtualenv.py`` up, too.
 
 * Fixed rST rendering bug of long description.
+
 
 1.7.1 (2012-02-16)
 ~~~~~~~~~~~~~~~~~~
@@ -133,6 +146,7 @@ Changes & News
 * Added activation script for Powershell (signed by Jannis Leidel). Many
   thanks to Jason R. Coombs.
 
+
 1.7 (2011-11-30)
 ~~~~~~~~~~~~~~~~
 
@@ -156,15 +170,18 @@ Changes & News
 
 * Made ``virtualenv.py`` script executable.
 
+
 1.6.4 (2011-07-21)
 ~~~~~~~~~~~~~~~~~~
 
 * Restored ability to run on Python 2.4, too.
 
+
 1.6.3 (2011-07-16)
 ~~~~~~~~~~~~~~~~~~
 
 * Restored ability to run on Python < 2.7.
+
 
 1.6.2 (2011-07-16)
 ~~~~~~~~~~~~~~~~~~
@@ -200,6 +217,7 @@ Changes & News
 
 * Added --never-download and --search-dir options. Thanks Ethan Jucovy.
 
+
 1.6
 ~~~
 
@@ -209,6 +227,7 @@ Changes & News
   (readline) are installed outside the standard library.
 
 * Updated bundled pip to 1.0.
+
 
 1.5.2
 ~~~~~
@@ -225,12 +244,14 @@ Changes & News
 
 * Moved virtualenv to Github at https://github.com/pypa/virtualenv
 
+
 1.5.1
 ~~~~~
 
 * Added ``_weakrefset`` requirement for Python 2.7.1.
 
 * Fixed Windows regression in 1.5
+
 
 1.5
 ~~~
@@ -249,10 +270,12 @@ Changes & News
 
 * Add fish and csh activate scripts.
 
+
 1.4.9
 ~~~~~
 
 * Include pip 0.7.2
+
 
 1.4.8
 ~~~~~
@@ -268,16 +291,19 @@ Changes & News
 
 * Include pip 0.7.1
 
+
 1.4.7
 ~~~~~
 
 * Include pip 0.7
+
 
 1.4.6
 ~~~~~
 
 * Allow ``activate.sh`` to skip updating the prompt (by setting
   ``$VIRTUAL_ENV_DISABLE_PROMPT``).
+
 
 1.4.5
 ~~~~~
@@ -286,6 +312,7 @@ Changes & News
 
 * Fix ``activate.bat`` and ``deactivate.bat`` under Windows when
   ``PATH`` contained a parenthesis
+
 
 1.4.4
 ~~~~~
@@ -302,10 +329,12 @@ Changes & News
   Distribute by default (so you don't have to remember to use
   ``--distribute``).
 
+
 1.4.3
 ~~~~~
 
 * Include pip 0.6.1
+
 
 1.4.2
 ~~~~~
@@ -317,10 +346,12 @@ Changes & News
 * Exclude ~/.local (user site-packages) from environments when using
   ``--no-site-packages``
 
+
 1.4.1
 ~~~~~
 
 * Include pip 0.6
+
 
 1.4
 ~~~
@@ -330,6 +361,7 @@ Changes & News
 * Added the --distribute option
 
 * Fixed packaging problem of support-files
+
 
 1.3.4
 ~~~~~
@@ -360,6 +392,7 @@ Changes & News
 * Fixes for ``--python``: make it work with ``--relocatable`` and the
   symlink created to the exact Python version.
 
+
 1.3.3
 ~~~~~
 
@@ -382,6 +415,7 @@ Changes & News
   <https://bugs.launchpad.net/virtualenv/+bug/340050>`_ picking up
   some ``.so`` libraries in ``/usr/local``.
 
+
 1.3.2
 ~~~~~
 
@@ -393,6 +427,7 @@ Changes & News
   and find a pre-downloaded Setuptools egg using that.
 
 * Added platform-specific paths, like ``/usr/lib/pythonX.Y/plat-linux2``
+
 
 1.3.1
 ~~~~~
@@ -415,6 +450,7 @@ Changes & News
 
 * Fixed handling of Jython environments that use a
   jython-complete.jar.
+
 
 1.3
 ~~~
@@ -442,6 +478,7 @@ Changes & News
 * Fixed the ``__classpath__`` entry in Jython's ``sys.path`` taking
   precedent over virtualenv's libs.
 
+
 1.2
 ~~~
 
@@ -450,10 +487,12 @@ Changes & News
 * Add ``sets`` to the module copied over for Python 2.3 (though Python
   2.3 still probably doesn't work).
 
+
 1.1.1
 ~~~~~
 
 * Added support for Jython 2.5.
+
 
 1.1
 ~~~
@@ -469,6 +508,7 @@ Changes & News
 * Copy or symlink over the ``include`` directory so that packages will
   more consistently compile.
 
+
 1.0
 ~~~
 
@@ -477,6 +517,7 @@ Changes & News
 * Fixed bug in ``--clear``.
 * Fixed typos in ``deactivate.bat``.
 * Preserve ``$PYTHONPATH`` when calling subprocesses.
+
 
 0.9.2
 ~~~~~
@@ -492,12 +533,14 @@ Changes & News
 * Fixed an issue with Mac Framework Python builds, and absolute paths
   (from Ronald Oussoren).
 
+
 0.9.1
 ~~~~~
 
 * Improve ability to create a virtualenv from inside a virtualenv.
 * Fix a little bug in ``bin/activate``.
 * Actually get ``distutils.cfg`` to work reliably.
+
 
 0.9
 ~~~
@@ -514,6 +557,7 @@ Changes & News
 * Should work on MacOSX Framework builds (the default Python
   installations on Mac).  Thanks to Ronald Oussoren.
 
+
 0.8.4
 ~~~~~
 
@@ -521,10 +565,12 @@ Changes & News
   were inaccurate.
 * Slightly prettier output.
 
+
 0.8.3
 ~~~~~
 
 * Added support for Windows.
+
 
 0.8.2
 ~~~~~
@@ -534,10 +580,12 @@ Changes & News
 * Give error about running while inside a workingenv.
 * Give better error message about Python 2.3.
 
+
 0.8.1
 ~~~~~
 
 Fixed packaging of the library.
+
 
 0.8
 ~~~
