--- a/docs/news.txt
+++ b/docs/news.txt
@@ -26,6 +26,9 @@ Changes & News
 
 * Added some more integration tests.
 
+* Removed the unsupported embedded setuptools egg for Python 2.4 to reduce
+  file size.
+
 1.8.3 (2012-11-21)
 ~~~~~~~~~~~~~~~~~~
 
