--- a/docs/changelog/1277.bugfix.rst
+++ b/docs/changelog/1277.bugfix.rst
@@ -1,1 +1,1 @@
-fixed a ``ResourceWarning: unclosed file`` in ``call_subprocess()`` - by :user:`BoboTiG`
+fixed a ``ResourceWarning: unclosed file`` in ``call_subprocess()`` - by Mickaël Schoentgen
