fix documentation, alter faulty examples

--- a/docs/changelog/1061.doc.rst
+++ b/docs/changelog/1061.doc.rst
@@ -1,1 +1,1 @@
-discourage installation as ``root``, including ``sudo`` - by :user:`altendky`
+discourage installation as ``root``, including ``sudo`` - by ``altendky``
