document edge cases, if inside function rather than outside

--- a/docs/changelog/1293.bugfix.rst
+++ b/docs/changelog/1293.bugfix.rst
@@ -1,1 +1,1 @@
-Use ``importlib`` over ``imp`` in ``virtualenv.py`` - by Anthony Sottile
+Use ``importlib`` over ``imp`` in ``virtualenv.py`` for ``python >= 3.4`` - by Anthony Sottile
