update changelog entry

--- a/docs/changelog/1303.bugfix.rst
+++ b/docs/changelog/1303.bugfix.rst
@@ -1,1 +1,3 @@
-Allow virtualenv creation with older pip not having ``config`` command.
+Allow virtualenv creation with older pip not having ``config`` command
+correspondingly disabling configuration related features (such as pip cert
+setting) in this case.
