--- a/docs/changelog/1302.bugfix.rst
+++ b/docs/changelog/1302.bugfix.rst
@@ -1,1 +1,1 @@
-Copy or link Python header files instead of include directory itself
+Copy or link PyPy header files instead of include directory itself
