rewrite the documentation
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/docs/changelog/1515.bugfix.rst
+++ b/docs/changelog/1515.bugfix.rst
@@ -11,4 +11,4 @@ Improve base executable discovery mechanism:
   system pythons version - these two can differ if the OS upgraded the system python underneath and the virtualenv
   host was created via copy),
 
-by ``gaborbernat``.
+by :user:`gaborbernat`.
