--- a/docs/changelog/1516.bugfix.rst
+++ b/docs/changelog/1516.bugfix.rst
@@ -1,1 +1,1 @@
-Creating virtual environments in parallel fail with cannot acquire lock within app data - by ``gaborbernat``.
+Creating virtual environments in parallel fail with cannot acquire lock within app data - by :user:`gaborbernat`.
