--- a/docs/changelog/1517.bugfix.rst
+++ b/docs/changelog/1517.bugfix.rst
@@ -1,1 +1,1 @@
-pth files were not processed under Debian CPython2 interpreters - by ``gaborbernat``.
+pth files were not processed under Debian CPython2 interpreters - by :user:`gaborbernat`.
