--- a/docs/changelog/1531.doc.rst
+++ b/docs/changelog/1531.doc.rst
@@ -1,1 +1,1 @@
-Project readme is now of type MarkDown instead of reStructuredText - by ``gaborbernat``.
+Project readme is now of type MarkDown instead of reStructuredText - by :user:`gaborbernat`.
