no longer symlink by default on app-data, but allow opt-in via --symlink-app-data
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/docs/changelog/1575.bugfix.rst
+++ b/docs/changelog/1575.bugfix.rst
@@ -1,1 +1,3 @@
-Respect the :option:`copies` flag inside the ``app-data`` :option:`seeder` by :user:`gaborbernat`.
+The ``app-data`` :option:`seeder` no longer symlinks the packages on UNIX and copies on Windows. Instead by default
+always copies, however now has the :option:`symlink-app-data` flag allowing users to request this less robust but faster
+method - by :user:`gaborbernat`.
