Remove a leftover error line with empty exception info
Since a6d6ed791d94c39b7348192503866aff6a0ba458 there is no exception to report about.

Related to https://github.com/pypa/virtualenv/pull/1651

--- a/docs/changelog/1651.bugfix.rst
+++ b/docs/changelog/1651.bugfix.rst
@@ -1,1 +1,1 @@
-fix error printing in bailout for Python < 2.7 - by ``AdamWill`
+fix error printing in bailout for Python < 2.7 - by ``AdamWill` and ``hroncok``
