--- a/docs/changelog/1679.bugfix.rst
+++ b/docs/changelog/1679.bugfix.rst
@@ -1,1 +1,1 @@
-Fix windows batch (cmd.exe) shell prompt to display environment name by default, simliar to bash behaviour. - by :user:`spetafree`.
+Fix Batch activation script shell prompt to display environment name by default - by :user:`spetafree`.
