Fix py info might be misslead by distutils config
Ignore configuration file parsing when getting distutils data.

Resolves #1663.

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/docs/changelog/1702.bugfix.rst
+++ b/docs/changelog/1702.bugfix.rst
@@ -1,1 +1,1 @@
-Upgrade embedded setuptools to ``46.0.0`` from ``45.3.0`` on Python ``3.5+``.
+Upgrade embedded setuptools to ``46.0.0`` from ``45.3.0`` on Python ``3.5+`` - by :user:`gaborbernat`.
