--- a/docs/changelog/1796.bugfix.rst
+++ b/docs/changelog/1796.bugfix.rst
@@ -1,1 +1,2 @@
-Fix CPython 2 is not discovered from Windows registry - by :user:`gaborbernat`.
+Fix CPython is not discovered from Windows registry, and discover pythons from Windows registry in decreasing order
+by version - by :user:`gaborbernat`.
