--- a/docs/changelog/1827.bugfix.rst
+++ b/docs/changelog/1827.bugfix.rst
@@ -1,1 +1,1 @@
-Upgrade embeded ``setuptools`` to ``46.3.1`` from ``46.1.3`` on Python ``3.5+`` - by :user:`gaborbernat`.
+Upgrade embeded ``setuptools`` to ``46.4.0`` from ``46.1.3`` on Python ``3.5+``, and ``pip`` from ``20.1`` to ``20.1.1`` - by :user:`gaborbernat`.
