fixup! Don't preimport threading early
Address review feedback:

- wrap comments at 120 characters;
- use "imported" instead of "preimport" in tests and leverage python
  syntax sugar to raise signal/noise;
- inline links in changelog

Try to fix test failures:

- try to disable coverage for spawned subrocess.

  However in the presence of coverage-enable-subprocess coverge is still
  unconditioanlly imported, and even plain `import coverage` leads to
  `import threading`. Probably need to fix coverage as well.

--- a/docs/changelog/1897.bugfix.rst
+++ b/docs/changelog/1897.bugfix.rst
@@ -1,4 +1,1 @@
-No longer preimport threading to fix support for gpython__ and gevent__ - by :user:`navytux`.
-
-__ https://pypi.org/project/pygolang/#gpython
-__ https://www.gevent.org/
+No longer preimport threading to fix support for `gpython <https://pypi.org/project/pygolang/#gpython>`_ and `gevent <https://www.gevent.org/>`_ - by :user:`navytux`.
