--- a/docs/changelog/1818.bugfix.rst
+++ b/docs/changelog/1818.bugfix.rst
@@ -1,1 +1,1 @@
-Use unix style line endings in bash activation script - by :user:`saytosid`.
+For activation scripts always use UNIX line endings (unless it's BATCH shell related) - by :user:`saytosid`.
