--- a/docs/changelog/1962.bugfix.rst
+++ b/docs/changelog/1962.bugfix.rst
@@ -1,1 +1,1 @@
-Fix Nonetype error in cygwin if POSIX path in dest - by :user:`danyeaw`.
+Fix ``None`` type error in cygwin if POSIX path in dest - by :user:`danyeaw`.
