Fix Windows subprocess calls with cwd are broken
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/docs/changelog/1982.bugfix.rst
+++ b/docs/changelog/1982.bugfix.rst
@@ -1,1 +1,1 @@
-Bump embeded setuptools from ``50.3.0`` to ``50.3.1`` - by :user:`gaborbernat`.
+Bump embedded setuptools from ``50.3.0`` to ``50.3.1`` - by :user:`gaborbernat`.
