--- a/docs/changelog/2003.feature.rst
+++ b/docs/changelog/2003.feature.rst
@@ -1,3 +1,3 @@
-Optionally skip generation of ``.gitignore`` with * directive in virtualenv
-directory, using command line option :option:`no-gitignore`.
+Optionally skip VCS ignore directive for entire virtualenv
+directory, using command line option :option:`no-vcsignore`.
 Default behavior is to generate the file as before.
