--- a/docs/changelog/2205.bugfix.rst
+++ b/docs/changelog/2205.bugfix.rst
@@ -1,1 +1,2 @@
-Upgrade embedded setuptools to ``58.2.0`` from ``58.1.0`` - by :user:`gaborbernat`.
+Upgrade embedded setuptools to ``58.3.0`` from ``58.1.0`` and pip to ``21.3.1`` from ``21.2.4`` - by
+:user:`gaborbernat`.
