--- a/docs/changelog/1774.feature.rst
+++ b/docs/changelog/1774.feature.rst
@@ -1,2 +1,2 @@
-Support for Windows embeddable Python package: includes ``python<VERSION>.zip``
-in the creator sources.
+Support for Windows embeddable Python package: includes ``python<VERSION>.zip`` in the creator sources
+- by :user:`reksarka`.
