--- a/docs/changelog/2351.bugfix.rst
+++ b/docs/changelog/2351.bugfix.rst
@@ -1,1 +1,1 @@
-Use ``shlex.quote`` instead of deprecated ``pipes.quote`` in Python 3. - by :user:`frenzymadness`.
+Use ``shlex.quote`` instead of deprecated ``pipes.quote`` in Python 3 - by :user:`frenzymadness`.
