Use furo docs theme
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/docs/changelog/2481.bugfix.rst
+++ b/docs/changelog/2481.bugfix.rst
@@ -1,1 +1,1 @@
-Fix broken prompt in Nushell when activating virtual environment.
+Fix broken prompt in Nushell when activating virtual environment - by :user:`kubouc`.
