--- a/docs/changelog/2514.bugfix.rst
+++ b/docs/changelog/2514.bugfix.rst
@@ -1,2 +1,2 @@
-Add `print` command to nushell print_prompt to ensure compatibility with future release of nushell,
+Add ``print`` command to nushell print_prompt to ensure compatibility with future release of nushell,
 where intermediate commands no longer print their result to stdout.
